# footle

./: Cargo.toml  admin
src/: env.rs  main.rs
src/ast/: expr.rs  mod.rs  parser.rs  stmt.rs
src/codegen/: allocator.rs  assembler.rs  binary.rs  disassembler.rs  isa.rs  mod.rs  pass.rs  scheduler.rs  sys.rs
src/core/: declaration.rs  mod.rs  nonempty.rs  operators.rs  parse_error.rs  source.rs  style.rs
src/lex/: lexer.rs  mod.rs  scanner.rs  token.rs
src/vir/: expr.rs  expr_pool.rs  mod.rs  pass.rs  stmt.rs  symbol_table.rs  variable.rs
test-cases/: comments.txt  numbers.txt
test-cases/arguments/: argument.txt  operators.txt  pow.txt
test-cases/assignment/: argument.txt  double.txt  extra-value.txt  immutable.txt  missing-second-value.txt  missing-value.txt  multiple.txt  mutable.txt  single.txt  unknown.txt
test-cases/blocks/: assignment.txt  inside-out.txt  outside-in.txt  simple.txt
test-cases/c-calls/: constant-sin.txt  sin-error.txt  sin.txt
test-cases/expressions/: add-one.txt  commutation.txt  comparison-normalisation.txt  comparisons.txt  cse.txt  folding.txt  operators.txt  order.txt
test-cases/register-allocator/swaps/: 3-cycle-and-3-chain.txt  3-of-4.txt  duplicate.txt  pair.txt  quartet.txt  square.txt  triplet.txt  two-3-cycles.txt
