[package]
name = "footle"
version = "0.1.0"
authors = ["Geoff Leyland <geoff.leyland@incremental.co.nz>"]
edition = "2024"

[dependencies]
git-version = "0.3.9"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
enum_glob_use = "allow"
missing_const_for_fn = "allow"
