[package]
name = "footle"
version = "0.1.0"
authors = ["Geoff Leyland <geoff.leyland@incremental.co.nz>"]
edition = "2024"

[dependencies]
git-version = "0.3.9"
argh = "0.1.19"
typed-arena = "2.0.2"
enumset = "1.1.10"
bit-set = "0.9"
libc = "0.2"
capstone = { version = "0.14", features = ["arch_arm64"] }

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
enum_glob_use = "allow"
missing_const_for_fn = "allow"
